# jirtik

./: Makefile  README.md  pyproject.toml  requirements.txt
publish/: config.json  publish_local.sh
src/jirtik/: __init__.py  app.py  config_manager.py  task_manager.py
src/jirtik/providers/: __init__.py  base.py  gitea.py  jira.py
src/my_app/: my_app.py  task_manager.py
