[tool.poetry]
name = "jirtik"
version = "0.1.0"
description = "A tool to create TickTick tasks from JIRA issues"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "jirtik", from = "src"}]

[tool.poetry.dependencies]
python = "~3.12.6"
requests = "2.26.0"
setuptools = "^75.8.0"
selenium = "^4.29.0"
playwright = "^1.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jirtik = "jirtik.app:main"

[tool.black]
line-length = 200

[tool.flake8]
max-line-length = 200